--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				  				</ul>
 				  			</div>
 				  			<div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
-				  				<a href="tel:+953 012 3654 896">+953 012 3654 896</a>
+				  				<a href="tel:+953 012 3654 896">+302 381 0000</a>
 				  				<a href="mailto:support@colorlib.com">support@colorlib.com</a>				
 				  			</div>
 				  		</div>			  					
